[gd_scene load_steps=11 format=2]

[ext_resource path="res://BubblePop/BubbleBurst_256.png" type="Texture" id=1]
[ext_resource path="res://BubblePop/Bubble.png" type="Texture" id=2]
[ext_resource path="res://SFX/Bubble_ogg.ogg" type="AudioStream" id=3]
[ext_resource path="res://BubblePop/Bubble.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=6]
radius = 127.016

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "pop",
"speed": 30.0
} ]

[node name="Bubble" type="Area2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3.49999, -8.49999 )
scale = Vector2( 11.65, 11.95 )

[node name="PopSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="mouse_entered" from="." to="." method="_on_Bubble_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Bubble_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
